--- a/thesite/templates/landing.html
+++ b/thesite/templates/landing.html
@@ -1,16 +1,174 @@
 {% extends 'base.html' %}
 
+
 {% block content %}
+{% load static %}
+<link rel="stylesheet" href="{% static 'css/browse_ideas.css' %}">
+<img class="ff" src="{% static 'thesite/images/cxonlanding.png' %}" alt="" srcset="">
+<img class="ffm" src="{% static 'thesite/images/cxonlandingmobile.png' %}" alt="" srcset="" style="display: none;">
+<style>
+    h1 {
+        font-size: 9vw !important;
+        font-family: "Tiempos Fine" !important;
+    }
 
-    
-<h1>Landing</h1>
+    .col-8 {
+        width: 100vw;
+    }
 
-<!--<ul>
-{% for post in object_list %}
-    <li><a href = "{% url 'article-detail' post.pk %}">{{ post.title }}</a> - {{ post.author.first_name }}
-    {{ post.author.last_name }} - {{ post.post_date }}<br/>
-    {{ post.description }}</li>
-{% endfor %}
-</ul>-->
+    row {
+        width: 100vw;
+    }
+
+    .ff {
+        z-index: -1;
+        display: block;
+        position: relative;
+        width: 70vw;
+        height: auto;
+        left: 50%;
+        -webkit-transform: translateX(-50%);
+        transform: translateX(-50%);
+    }
+
+    .ffm {
+        display: none;
+    }
+
+    .stuff {
+        z-index: 99;
+        margin-top: -100px;
+        margin-left: 10vw;
+    }
+
+    .stuff button {
+        margin-right: 10px;
+    }
+
+    .stuff a {
+        color: darkgray !important;
+    }
+
+    @media screen and (max-width: 768px) {
+        .ff {
+            display: none !important;
+        }
+
+        .ffm {
+            display: block !important;
+        }
+
+        .stuff {
+            margin-top: 0px;
+            margin-left: 0vw;
+        }
+    }
+</style>
+<div class="stuff">
+    <button class="btn btn-secondary" id="register_btn">Get Started</button>
+    <a href="#ideas">Scroll to browse ideas</a>
+</div>
+<script>
+    document.getElementById("register_btn").onclick = function () {
+        location.href = "{% url 'register' %}";
+    };
+</script>
+
+<br>
+<br>
+<hr>
+<br>
+
+<style>
+    .card-group {
+        margin-top: 20px;
+    }
+
+    .card {
+        background-color: #272727;
+        color: #FCFBF6;
+    }
+
+    .card .hori {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+        flex-direction: row;
+        -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+        justify-content: space-between;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+    }
+
+    .card .hori h5 {
+        font-family: 'Test Tiempos Fine Black', serif;
+        height: 100%;
+    }
+
+    .card .stuff {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+        flex-direction: row;
+        -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+        justify-content: space-between;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+    }
+
+    .card-block {
+        height: -webkit-max-content;
+        height: -moz-max-content;
+        height: max-content;
+    }
+
+    .card img {
+        width: 100%;
+    }
+
+    .row {
+        margin-bottom: 20px;
+    }
+
+    /*# sourceMappingURL=browse_ideas.css.map */
+</style>
+
+<div class="card-group">
+    <div class="row row-cols-2 justify-content">
+        {% for post in object_list %}
+        <!-- card -->
+        <!-- <a href="{% url 'article-detail' post.pk %}"> -->
+        <div class="card" style="width: 18rem;">
+            {% if post.header_image %}
+            <img src="{{ post.header_image.url }}" class="card-img-top" alt="...">
+            {% endif %}
+            <div class="card-body">
+                <div class="hori">
+                    <h5 class="card-title">{{ post.title }}</h5>
+                    <span><i class="fa-solid fa-heart"></i> {{ likes }}</span>
+                </div>
+                <p class="card-text">{{ post.description|slice:":200" }}</p>
+                <div class="stuff">
+                    <a href="mailto:report@cxon.net" class="text-warning">Report</a>
+                    <button class="btn btn-primary" onclick="window.location=''">View</button>
+                </div>
+            </div>
+        </div>
+        <!-- </a> -->
+        <!-- card -->
+        {% endfor %}
+    </div>
+</div>
+<!-- </div> -->
 
 {% endblock %}
