--- a/members/templates/registration/login.html
+++ b/members/templates/registration/login.html
@@ -3,14 +3,78 @@
 {% block title %}
 Login
 {% endblock %}
-
+{% load static %}
 {% block content %}
 
     
 <h1>Login</h1>
 <br/>
 <br/>
+<style>
+    body {
+        /* background-color: aqua; */
+        background-image: url("{% static 'thesite/images/cxonbg.png' %}");
+        height: 100vh;
+        background-repeat: no-repeat;
+    }
 
+    #content {
+        background-color: white !important;
+        width: fit-content;
+        max-width: 95%;
+        padding: 20px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+    form {
+        width: max-content;
+        max-width: 100%;
+        margin: auto;
+        background-color: white !important;
+        height: max-content;
+    }
+
+    .row {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    h1 {
+        text-align: center;
+    }
+
+    br {
+        display: none;
+    }
+
+    .col-8 {
+        height: fit-content;
+        width: fit-content;
+        padding: 20px;
+        background-color: white;
+        border-radius: 10px;
+        box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.135);
+        margin: 0;
+        position: absolute;
+        top: 50%;
+        -ms-transform: translateY(-50%);
+        transform: translateY(-50%);
+    }
+
+    form button {
+        display: block;
+        width: max-content;
+        margin-left: 50%;
+        -ms-transform: translate(-50%);
+        transform: translate(-50%);
+        margin-top: 10px;
+    }
+</style>
  <div class="form-group">
     <form method="POST">
         {% csrf_token %}
