--- a/thesite/templates/add_post.html
+++ b/thesite/templates/add_post.html
@@ -1,31 +1,46 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block title %}
 List a New Idea
 {% endblock %}
 
 {% block content %}
+<link rel="stylesheet" href="{% static 'css/add_post.css' %}">
 
-  
-{% if user.is_authenticated %}  
-    <h1>List Idea</h1>
-    <br/>
-    <br/>
+{% if user.is_authenticated %}
+<!-- <h1>List Idea</h1> -->
+<div class="progress">
+    <div class="progress-bar bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0"
+        aria-valuemax="100" id="mybar"></div>
+</div>
+<br>
 
-    <div class="form-group">
-        <form method="POST" enctype="multipart/form-data">
-            {% csrf_token %}
-            {{ form.media  }}
-            {{ form.as_p }}
-            <button class="btn btn-secondary">Post</button>
-        </form>
-    </div>
+<div class="form-group">
+    <form method="POST" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{ form.media }}
+        {{ form.as_p }}
+        <button class="btn btn-secondary">Post</button>
+    </form>
+</div>
+<img class="bgba" src="{% static 'thesite/images/Vectorcsongrey.png' %}" alt="" srcset="">
+<br>
+<script>
+    var name = "{{ user.id }}";
+    document.getElementById("user").value = name;
 
-    <script>
-        var name = "{{ user.id }}";
-        document.getElementById("user").value = name;
+</script>
+<script>
+    // When the user scrolls the page, execute myFunction 
+    window.onscroll = function () { myFunction() };
 
-    </script>
+    function myFunction() {
+        var winScroll = document.body.scrollTop || document.documentElement.scrollTop;
+        var height = document.documentElement.scrollHeight - document.documentElement.clientHeight;
+        var scrolled = (winScroll / height) * 100;
+        document.getElementById("mybar").style.width = scrolled + "%";
+    }
+</script>
 
 {% else %}
 
@@ -35,6 +50,3 @@ You need to login to access this page
 
 
 {% endblock %}
-
-
-
