--- a/static/css/browse_ideas.css
+++ b/static/css/browse_ideas.css
@@ -1,44 +1,45 @@
-@media (max-width: 576px) {
-  .xs {
-    color: red;
-    font-weight: bold;
-  }
-}
-
-/* Small devices (landscape phones, 576px and up) */
-@media (min-width: 576px) and (max-width: 768px) {
-  .sm {
-    color: red;
-    font-weight: bold;
-  }
-}
-
-/* Medium devices (tablets, 768px and up) The navbar toggle appears at this breakpoint */
-@media (min-width: 768px) and (max-width: 992px) {
-  .md {
-    color: red;
-    font-weight: bold;
-  }
-}
-
-/* Large devices (desktops, 992px and up) */
-@media (min-width: 992px) and (max-width: 1200px) {
-  .lg {
-    color: red;
-    font-weight: bold;
-  }
-}
-
-/* Extra large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) {
-  .xl {
-    color: red;
-    font-weight: bold;
-  }
+*,
+*::before,
+*::after {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .card-group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  list-style: none;
+  margin: 0;
+  padding: 0;
   margin-top: 20px;
+}
+
+.cards_item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 1rem;
+}
+
+@media (min-width: 100px) {
+  .cards_item {
+    width: 50%;
+  }
+}
+
+@media (min-width: 1500px) {
+  .cards_item {
+    width: 33.3333%;
+  }
+}
+
+@media (min-width: 1800px) {
+  .cards_item {
+    width: 25%;
+  }
 }
 
 .card {
