--- a/static/css/browse_ideas.scss
+++ b/static/css/browse_ideas.scss
@@ -1,51 +1,39 @@
-@media (max-width: 576px) {
-    .xs {
-        color: red;
-        font-weight: bold;
-    }
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
 }
-
-/* Small devices (landscape phones, 576px and up) */
-@media (min-width: 576px) and (max-width:768px) {
-    .sm {
-        color: red;
-        font-weight: bold;
-    }
-}
-
-/* Medium devices (tablets, 768px and up) The navbar toggle appears at this breakpoint */
-@media (min-width: 768px) and (max-width:992px) {
-    .md {
-        color: red;
-        font-weight: bold;
-    }
-}
-
-/* Large devices (desktops, 992px and up) */
-@media (min-width: 992px) and (max-width:1200px) {
-    .lg {
-        color: red;
-        font-weight: bold;
-    }
-}
-
-/* Extra large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) {
-    .xl {
-        color: red;
-        font-weight: bold;
-    }
-}
-
-@media (max-width: 480px) {
-    .row {
-
-    }
-}
-
 
 .card-group {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    margin: 0;
+    padding: 0;
     margin-top: 20px;
+}
+
+.cards_item {
+    display: flex;
+    padding: 1rem;
+}
+
+@media (min-width: 100px) {
+    .cards_item {
+        width: 50%;
+    }
+}
+
+@media (min-width: 1500px) {
+    .cards_item {
+        width: 33.3333%;
+    }
+}
+
+@media (min-width: 1800px) {
+    .cards_item {
+        width: 25%;
+    }
 }
 
 .card {
@@ -70,6 +58,7 @@
         justify-content: space-between;
         align-items: center;
     }
+
     margin-bottom: 20px !important;
 }
 
