--- a/static/css/browse_ideas.scss
+++ b/static/css/browse_ideas.scss
@@ -5,11 +5,6 @@
 }
 
 .card-group {
-    display: flex;
-    flex-wrap: wrap;
-    list-style: none;
-    margin: 0;
-    padding: 0;
     margin-top: 20px;
 }
 
@@ -40,6 +35,11 @@
     background-color: #272727;
     color: #FCFBF6;
 
+    img {
+        object-fit: cover;
+        max-height: 250px;
+    }
+
     .hori {
         display: flex;
         flex-direction: row;
@@ -62,9 +62,6 @@
     margin-bottom: 20px !important;
 }
 
-.xx {
-    padding: 20px !important;
-}
 
 .card-block {
     height: -webkit-max-content;
@@ -72,9 +69,6 @@
     height: max-content;
 }
 
-.card-group .card img {
-    width: 100%;
-}
 
 .row {
     margin-bottom: 20px;
