--- a/members/templates/registration/login.html
+++ b/members/templates/registration/login.html
@@ -22,11 +22,14 @@ Login
         background-color: white !important;
         width: fit-content;
         max-width: 95%;
-        padding: 20px;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        padding: 30px;
+        border-radius: 10px;
+        /* border: 1px solid rgba(0, 0, 0, 0.104); */
+        box-shadow: 0px 2px 2px 0 rgba(0, 0, 0, 0.458);
+        position: relative;
+        top: 100px;
+        margin: auto;
+        bottom: 100px;
     }
 
     form {
